src/parser/parser.peg
document
  = group:group (space)* { return group}

group
 = (space)* "{" items:(item)* (space)* "}" { return {group: items}}

item
 = group:group {return group}
 / codes:codes {return codes}
 / text:text {return text}

codes
 = codes:(code)+ (space)* {return codes}

code
 = (space)* "\\" code:[0-9a-z\n]+ (space)* optional:"?"? {return code.join('').replace('\n', '').replace('\r', '') + (optional || '')}

text
 = words:(word)+ {return words.join('')}

word
 = leadingSpace:(space)* chars:[0-9A-Za-z\.;\:\-\,\!]+ trailingSpace:(space)* {return (leadingSpace || '') + chars.join('') + (trailingSpace || '')}

space
 = " " {return " "}
 / "\n" {return ""}
 / "\t" {return "\t"}
 / "\r" {return ""}
